# cmakex

./: README.md  design.md  pyproject.toml
src/cmakex/: __init__.py  build.py  cli.py  dependencies.py  errors.py  github.py  probe.py  refs.py  templates.py
tests/: test_build.py  test_cli.py  test_dependencies.py  test_refs.py  test_templates.py
